--- a/blueprints/test-demo.yaml
+++ b/blueprints/test-demo.yaml
@@ -26,7 +26,7 @@ grains:
     kind: terraform
     spec:
       source:
-        path: terraform/simple-tf-module
+        path: github.com/orel-h/test-spec2-public.git//terraform/simple-tf-module
       host:
         cloud-account: aws
         compute-service: eks
