--- a/blueprints/simple-liav-no-cloud-account.yaml
+++ b/blueprints/simple-liav-no-cloud-account.yaml
@@ -57,7 +57,7 @@ grains:
         path: https://github.com/bitnami/charts.git//bitnami/node
       host:
         cloud-account: private-cloud
-        compute-service: eks
+        compute-service: eks-test
       commands:
         - "dep up bitnami/node"
 
@@ -72,7 +72,7 @@ grains:
       source:
         path: https://github.com/bitnami/charts.git//bitnami/node
       host:
-        Name: eks
+        Name: eks-test
       commands:
         - "dep up bitnami/node"
 
