--- a/blueprints/tf-outputs.yaml
+++ b/blueprints/tf-outputs.yaml
@@ -23,7 +23,7 @@ outputs:
   output4:
     value: '{{.grains.helloTF.outputs.output2}}'
   output5: 
-    value: '{{ sandboxid }}.{{ output1 }}'
+    value: '{{ sandboxid }}.{{ .grains.helloTF.outputs.output1  }}'
   output6: 
     value: '{{ .grains.helloTF.outputs.output1 }}.{{ .grains.helloTF.outputs.output2 }}'
 
