--- a/blueprints/tf-outputs-2.yaml
+++ b/blueprints/tf-outputs-2.yaml
@@ -1,8 +1,5 @@
 spec_version: 2-preview
-
 description: description text
-
-
 
 inputs:
   input1:
@@ -15,7 +12,6 @@ inputs:
     display-style: normal
     description: "environemnt input 2"    
 
-
 # values that starts with '{' for liquid template must be encosed with quotes so YAML won't consider them as dict
 outputs:
   output1:
@@ -24,18 +20,21 @@ outputs:
     value: '{{.inputs.input1}}'
   output3:
     value: '{{.grains.helloTF.outputs.output1}}'
-    
+  output4:
+    value: '{{.grains.helloTF.outputs.output2}}'
+  output5: 
+    value: '{{ sandboxid }}.{{ .grains.helloTF.outputs.output1  }}'
+  output6: 
+    value: '{{ .grains.helloTF.outputs.output1 }}.{{ .grains.helloTF.outputs.output2 }}'
 
 grains:
   helloTF:
     kind: terraform
     spec:
       source:
-        store: autogen_repo_sandbox_3416a76b
-        path: terraform/simple-tf-module
+        path: github.com/orel-h/test-spec2-public.git//terraform/simple-tf-outputs
       host:
-        cloud-account: aws
-        compute-service: eks
+        name: eks
       inputs:
         - test_input1: env-input-{{.inputs.input1}}
         - test_input2: env-id-{{sandboxId}}
@@ -43,20 +42,3 @@ grains:
         - output1
         - output2
 
-
-
-  helloHelm:
-    kind: helm
-    depends-on: helloTF
-    spec:
-      source:
-        path: https://github.com/bitnami/charts.git//bitnami/node
-      host:
-        cloud-account: aws
-        compute-service: eks
-      commands:
-        - "dep up bitnami/node"
-
-      inputs:
-        #- nameOverride: '{{.inputs.input1}}'
-        - nameOverride: '{{.grains.helloTF.outputs.output1}}'
