--- a/blueprints/tf-outputs-3.yaml
+++ b/blueprints/tf-outputs-3.yaml
@@ -15,7 +15,7 @@ inputs:
 # values that starts with '{' for liquid template must be encosed with quotes so YAML won't consider them as dict
 outputs:
   output1:
-    kind: link
+    kind: hyperlink
     value: '{{.grains.helloTF.outputs.output1}}'
   output2:
     kind: regular
