--- a/blueprints/tf-outputs-4.yaml
+++ b/blueprints/tf-outputs-4.yaml
@@ -25,7 +25,7 @@ outputs:
     value: '{{.grains.helloTF.outputs.output2}}'
   output4:
     kind: regular
-    value: 'https://{{.grains.helloTF.outputs.output1}}/dashboard/'
+    value: $"https://{.grains.helloTF.outputs.output1}/dashboard/"
 
 grains:
   helloTF:
