--- a/blueprints/tf-outputs-4.yaml
+++ b/blueprints/tf-outputs-4.yaml
@@ -20,6 +20,9 @@ outputs:
   output2:
     kind: regular
     value: '{{.grains.helloTF.outputs.output2}}'
+  output3:
+    kind: regular
+    value: $"https://{.grains.helloTF.outputs.output1}/dashboard/"
 
 grains:
   helloTF:
