--- a/blueprints/tf-outputs-4.yaml
+++ b/blueprints/tf-outputs-4.yaml
@@ -19,10 +19,10 @@ outputs:
     value: '{{.grains.helloTF.outputs.output1}}'
   output2:
     kind: regular
-    value: '{{.grains.helloTF.outputs.output2}}'
+    value: {{.grains.helloTF.outputs.output2}}
   output3:
     kind: regular
-    value: $"https://{.grains.helloTF.outputs.output1}/dashboard/"
+    value: https://{.grains.helloTF.outputs.output1}/dashboard/
 
 grains:
   helloTF:
