--- a/blueprints/tf-outputs-4.yaml
+++ b/blueprints/tf-outputs-4.yaml
@@ -23,6 +23,9 @@ outputs:
   output3:
     kind: link
     value: https://{.grains.helloTF.outputs.output1}/dashboard/
+  output4:
+    kind: regular
+    value: '{{.grains.helloTF.outputs.output1}}.{{.grains.helloTF.outputs.output2}}'
 
 grains:
   helloTF:
