--- a/blueprints/tf-outputs-4.yaml
+++ b/blueprints/tf-outputs-4.yaml
@@ -22,7 +22,7 @@ outputs:
     value: '{{.grains.helloTF.outputs.output2}}'
   output3:
     kind: link
-    value: https://{.grains.helloTF.outputs.output1}/dashboard/
+    value: 'https://{{.grains.helloTF.outputs.output1}}/dashboard/'
   output4:
     kind: regular
     value: '{{.grains.helloTF.outputs.output1}}.{{.grains.helloTF.outputs.output2}}'
