--- a/blueprints/helm-orig.yaml
+++ b/blueprints/helm-orig.yaml
@@ -6,7 +6,7 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 1"
+    description: "Number of NGINX replicas to deploy 2"
 
 grains:
   nginx:
@@ -19,3 +19,5 @@ grains:
         service-account: torque-sidecar-sa-19805c
       inputs:
         - replicaCount: '{{ .inputs.replicaCount }}'
+      commands:
+        - dep up bitnami/nginx
