--- a/blueprints/simple-orel-helm-test.yaml
+++ b/blueprints/simple-orel-helm-test.yaml
@@ -6,7 +6,15 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 5"
+    description: "Number of NGINX replicas to deploy 6"
+
+outputs:
+  output1:
+    kind: regular
+    value: '{{.grains.nginx.outputs.output1}}'
+  output2:
+    kind: regular
+    value: '{{.grains.nginx.outputs.output2}}'
 
 grains:
   nginx:
@@ -24,4 +32,7 @@ grains:
       scripts:
         post-helm-install:
           source:  
-            path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.sh
+            path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.s
+      outputs:
+        - output1
+        - output2
