--- a/blueprints/simple-orel-helm-test.yaml
+++ b/blueprints/simple-orel-helm-test.yaml
@@ -6,15 +6,15 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 10"
+    description: "Number of NGINX replicas to deploy 11"
 
 outputs:
   output1:
     kind: regular
-    value: '{{.grains.nginx.outputs.output1}}'
+    value: '{{.grains.nginx.outputs.test1}}'
   output2:
     kind: regular
-    value: '{{.grains.nginx.outputs.output2}}'
+    value: '{{.grains.nginx.outputs.test2}}'
   output3:
     kind: regular
     value: 'https://{{.grains.nginx.outputs.output1}}.{{.grains.nginx.outputs.output2}}/dashboard/'
@@ -37,5 +37,5 @@ grains:
           source:  
             path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.sh
       outputs:
-        - output1
-        - output2
+        - test1
+        - test2
