--- a/blueprints/simple-orel-helm-test.yaml
+++ b/blueprints/simple-orel-helm-test.yaml
@@ -6,7 +6,7 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 11"
+    description: "Number of NGINX replicas to deploy 12"
 
 outputs:
   output1:
@@ -36,6 +36,9 @@ grains:
         post-helm-install:
           source:  
             path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.sh
+          outputs:
+            - test3
+            - test4
       outputs:
         - test1
         - test2
