--- a/blueprints/simple-orel-helm-test.yaml
+++ b/blueprints/simple-orel-helm-test.yaml
@@ -6,18 +6,18 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 12"
+    description: "Number of NGINX replicas to deploy 14"
 
 outputs:
   output1:
     kind: regular
-    value: '{{.grains.nginx.outputs.test1}}'
+    value: '{{.grains.nginx.scripts.post-helm-install.outputs.test1}}'
   output2:
     kind: regular
-    value: '{{.grains.nginx.outputs.test2}}'
+    value: '{{.grains.nginx.scripts.post-helm-install.outputs.test2}}'
   output3:
     kind: regular
-    value: 'https://{{.grains.nginx.outputs.test1}}.{{.grains.nginx.outputs.test2}}/dashboard/'
+    value: 'https://{{.grains.nginx.scripts.post-helm-install.outputs.test1}}.{{.grains.nginx.scripts.post-helm-install.outputs.test2}}/dashboard/'
 
 grains:
   nginx:
@@ -37,8 +37,8 @@ grains:
           source:  
             path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.sh
           outputs:
-            - test3
-            - test4
+            - test1
+            - test2
       outputs:
         - test1
         - test2
