--- a/blueprints/helm-tf-outputs-args.yaml
+++ b/blueprints/helm-tf-outputs-args.yaml
@@ -46,7 +46,8 @@ grains:
       scripts:
         post-helm-install:
           source:  
-            path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script.sh
+            path: github.com/orel-h/test-spec2-public.git//scripts/orel_helm_script_args.sh
+          arguments: p1 p2
           outputs:
             - test1
             - test2
