--- a/blueprints/helm-nested.yaml
+++ b/blueprints/helm-nested.yaml
@@ -6,7 +6,7 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 21"
+    description: "Number of NGINX replicas to deploy"
   input1:
     type: string
     display-style: normal
