--- a/blueprints/helm-no-outputs-demo.yaml
+++ b/blueprints/helm-no-outputs-demo.yaml
@@ -6,20 +6,12 @@ inputs:
     type: number
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 20"
+    description: "Number of NGINX replicas to deploy"
   input1:
     type: string
     display-style: normal
     default: "default1"
     description: "environemnt input 1"
-
-outputs:
-  output1:
-    kind: regular
-    value: '{{.grains.helloTF.outputs.output1}}'
-  output2:
-    kind: regular
-    value: '{{.grains.helloTF.outputs.output2}}'
 
 grains:
   nginx:
@@ -34,17 +26,3 @@ grains:
         - replicaCount: '{{ .inputs.replicaCount }}'
       commands:
         - dep up bitnami/nginx
-
-  helloTF:
-    kind: terraform
-    spec:
-      source:
-        path: github.com/orel-h/test-spec2-public.git//terraform/simple-tf-outputs
-      host:
-        compute-service: eks
-      inputs:
-        - test_input1: env-input-{{.inputs.input1}}
-        - test_input2: env-id-{{sandboxId}}
-      outputs:
-        - output1
-        - output2
