--- a/blueprints/helm-no-outputs-demo.yaml
+++ b/blueprints/helm-no-outputs-demo.yaml
@@ -3,7 +3,7 @@ description: Blueprint for bitnami nginx helm chart
 
 inputs:
   replicaCount:
-    type: number
+    type: string
     display-style: normal
     default: 1
     description: "Number of NGINX replicas to deploy"
