--- a/blueprints/simple-orel-helm-test.yaml
+++ b/blueprints/simple-orel-helm-test.yaml
@@ -3,10 +3,10 @@ description: Blueprint for bitnami nginx helm chart
 
 inputs:
   replicaCount:
-    type: number
+    type: string
     display-style: normal
     default: 1
-    description: "Number of NGINX replicas to deploy 20"
+    description: "Number of NGINX replicas to deploy"
 
 outputs:
   output1:
